# jakski.github.io

./: .editorconfig  .gitignore  README.md  blog.nimble  cfg.json  conf.py  config.yaml  index-template.html  index.html  main.c  meson.build  page-template.html  pyproject.toml  style.css
docs/: .buildinfo.bak  genindex.html  index.html  objects.inv  requirements.html  search.html  searchindex.js
media/: .gitignore  cloud-init-image.sh  low-effort-monitoring.sh  webservice.py
pages/: advanced-curl-usage.html  bash-efficient-return.html  combining-variables-in-ansible.html  configuring-fail-over-in-nginx.html  debugging-docker-container.html  debugging-golang-in-kubernetes.html  devbox-vm.html  documenting-ansible-roles.html  error-handling-in-bash.html  introduction.html  json-delta.html  low-effort-website-monitoring.html  neovim-channel-doesnt-exist-error.html  ovh-kernel-upgrade.html  safe-development-environment.html  securing-development-environment.html
posts/: 2018-02-04.md  2018-06-14.md  2018-06-26.md  2018-07-18.md  2019-02-09.md  2019-05-26.md  2021-11-18.md  2022-05-25.md  2023-01-03.md  2023-09-02.md  2024-03-05.md  2025-07-23.rst  advanced-curl-usage.html  advanced-curl-usage.md  bash-efficient-return.html  bash-efficient-return.md  combining-variables-in-ansible.html  combining-variables-in-ansible.md  configuring-fail-over-in-nginx.html  configuring-fail-over-in-nginx.md  debugging-docker-container.html  debugging-docker-container.md  debugging-golang-in-kubernetes.html  devbox-vm.html  devbox-vm.md  (+18 more)
subprojects/packagefiles/mustach/: meson.build
(+28 files in other folders)
