[build-system]
requires = ["setuptools >= 66.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jakski-github-io"
version = "0.0.1"
description = "Jakski blog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Sphinx>=8.2.3,<9",
  "sphinxcontrib-plantuml>=0.30",
  "myst-parser>=4.0.1",
]

[tool.setuptools]
# This is a meta-package for bundling dependencies
packages = []
